cmake_minimum_required(VERSION 2.6)

project(dse)
set(CMAKE_C_FLAGS "-Wall")
option(CMAKE_C_FLAGS_DEBUG "-O0 -g3")
option(CMAKE_C_FLAGS_RELEASE "-O2 -g0")

find_library(HAVE_LIBDL NAMES dl)
find_library(HAVE_LIBCURL NAMES curl)
find_library(HAVE_LIBEVENT NAMES event)
find_library(HAVE_KONOHA NAMES konoha)

add_executable(dse dse.c)
if(HAVE_LIBDL)
	set(DSE_EXTRA_LIBRARY ${DSE_EXTRA_LIBRARY} dl)
endif(HAVE_LIBDL)
if(HAVE_LIBCURL)
	set(DSE_EXTRA_LIBRARY ${DSE_EXTRA_LIBRARY} curl)
endif(HAVE_LIBCURL)
if(HAVE_LIBEVENT)
	set(DSE_EXTRA_LIBRARY ${DSE_EXTRA_LIBRARY} event)
endif(HAVE_LIBEVENT)
if(HAVE_KONOHA)
	set(DSE_EXTRA_LIBRARY ${DSE_EXTRA_LIBRARY} konoha)
endif(HAVE_KONOHA)
target_link_libraries(dse ${DSE_EXTRA_LIBRARY})

set(DSE_SCRIPT_DIR lib/dse)
set(DSE_CONFIG_DIR /etc/dse)
set(DSE_SCRIPT_CODE script/core.k)
set(DSE_CONFIG_CODE script/config.k)
install(TARGETS dse DESTINATION bin)
install(FILES ${DSE_SCRIPT_CODE} DESTINATION ${DSE_SCRIPT_DIR})
install(FILES ${DSE_CONFIG_CODE} DESTINATION ${DSE_CONFIG_DIR})
